--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "pokeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/server.js",
-    "dev": "npx tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/server.js\"",
+    "start": "node .",
+    "dev": "npx tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
