--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node .",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hyperhtml/pokeapi#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
