--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/hyperhtml/pokeapi#readme",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
